added initial data to the library and displayed the initial books onto a table

--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+body,
+html {
+  padding: 0;
+  margin: 0;
+}
+
 #table,
 th,
 td {
   border: solid darkgrey;
+}
+
+#table-header {
+  background-color: aqua;
 }
