centered container and add Button for adding to Library

--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ td {
 #table-header {
   background-color: aqua;
 }
+
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
