--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@ td {
   flex-direction: column;
   align-items: center;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 0 0 0 8px;
+}
